# Wolfenstein3D-like-engine

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/include/Engine/: Assets.h  Command.h  CommandQueue.h  Engine.h  GameState.h  Map.h  Player.h  Raycaster.h  Renderer.h  Sprite.h  Texture.h
Engine/include/Engine/Command/: Command.h  CommandQueue.h
Engine/include/Engine/Entity/: DamageableEntity.h  Entity.h  InteractiveEntity.h  PickupEntity.h  StaticEntity.h
Engine/include/Engine/Entity/Sprite/: Sprite.h
Engine/include/Engine/Utils/: Vector2.h
Engine/include/Engine/entity/: DamageableEntity.h  Entity.h  EntityType.h  InteractiveEntity.h  PickupEntity.h  StaticEntity.h
Engine/include/Engine/entity/Sprite/: Sprite.h  SpriteModel.h
Engine/include/Engine/hud/: HUD.h
Engine/include/Engine/renderer/: Raycaster.h  Renderer.h
Engine/include/Engine/utils/: BitmapFont.h  Vector2.h  Viewport.h
Engine/src/: Assets.cpp  Engine.cpp  Map.cpp  Player.cpp  Raycaster.cpp  Renderer.cpp  Texture.cpp
Engine/src/hud/: HUD.cpp
Engine/src/renderer/: Raycaster.cpp  Renderer.cpp
Engine/src/utils/: Assets.cpp  BitmapFont.cpp
Game/: CMakeLists.txt
Game/include/Game/: Game.h  GameState.h  GameplayState.h  MainMenuState.h
Game/include/Game/commands/: FireCommand.h  MouseTurnCommand.h  MoveBackwardCommand.h  MoveForwardCommand.h  TurnLeftCommand.h  TurnRightCommand.h
Game/include/Game/entities/: DamagableBarrelEntity.h  HealthEntity.h
Game/include/Game/states/: GameplayState.h  MainMenuState.h
Game/src/: Game.cpp  GameplayState.cpp  MainMenuState.cpp  main.cpp
Game/src/states/: GameplayState.cpp  MainMenuState.cpp
Resources/maps/world1/: sample_map_floor.txt
assets/maps/world1/: sample_map_ceiling.txt  sample_map_floor.txt
assets/textures/: floor_wood.png~
src/: Game.cpp  Game.h  Map.cpp  Map.h  Player.cpp  Player.h  Raycaster.cpp  Raycaster.h  Renderer.cpp  Renderer.h  Sprite.h  TextureManager.cpp  TextureManager.h  main.cpp
src/engine/: Game.cpp  Game.h  Map.h  Player.h  Raycaster.cpp  Raycaster.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
